Renomeando curso de Integração COntínua.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>AWS Cloud</li>
         <li>Lógica de Programação</li>
         <li>Microsoft Azure</li>
-        <li>Integração Contínua</li>
+        <li>Integração Contínua: Matuaridade e Produtividade</li>
         <li>Python</li>
         <li>JavaScript</li>
     </ul>
