Adicionando curso de Kubernetes.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li>Integração Contínua: Matuaridade e Produtividade</li>
         <li>Python</li>
         <li>JavaScript</li>
+        <li>Kubernetes</li>
     </ul>
 </body>
 </html>
