--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker: criando containers</li>
         <li>Ansible</li>
         <li>AWS Cloud</li>
         <li>Lógica de Programação</li>
