Atualizando nome do curso Vagrant.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: máquinas virtuais</li>
         <li>Docker: criando containers</li>
         <li>Ansible</li>
         <li>AWS Cloud</li>
