--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <ul>
         <li>Vagrant: máquinas virtuais</li>
         <li>Docker: criando containers</li>
-        <li>Ansible</li>
+        <li>Ansible: Sua infraestrutura como código</li>
         <li>AWS Cloud</li>
         <li>Lógica de Programação</li>
         <li>Microsoft Azure</li>
         <li>Integração Contínua: Matuaridade e Produtividade</li>
-        <li>Python</li>
+        <li>Curso Python para Data Science: Introdução à linguagem e Numpy</li>
         <li>JavaScript</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes: Pods, Services e ConfigMaps</li>
     </ul>
 </body>
 </html>
