Atualizando a lista de cursos.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <title>LISTA DE CURSOS - Alura</title>
 </head>
 <body>
-    <ul>
-        <li>Vagrant: máquinas virtuais</li>
-        <li>Docker: criando containers</li>
-        <li>Ansible: Sua infraestrutura como código</li>
-        <li>AWS Cloud</li>
-        <li>Lógica de Programação</li>
-        <li>Microsoft Azure</li>
-        <li>Integração Contínua: Matuaridade e Produtividade</li>
-        <li>Curso Python para Data Science: Introdução à linguagem e Numpy</li>
-        <li>JavaScript</li>
-        <li>Kubernetes: Pods, Services e ConfigMaps</li>
-    </ul>
+    <h1>Cursos de Tecnologia da Informação - alura</h1>
+    <dl>
+        <dt>Vagrant</dt>
+        <dd>Gerenciando máquinas virtuais</dd>
+        <dt>Docker</dt>
+        <dd>Criando containers sem dor de cabeça</dd>
+        <dt>Ansible</dt>
+        <dd>Sua infraestrutura como código</dd>
+        <dt>Integração Contínua</dt>
+        <dd>Maturidade e Produtividade no Desenvolvimento de Software</dd>
+        <dt>Kubernetes</dt>
+        <dd>Introdução a orquestração de containers</dd>
+    </dl>
 </body>
 </html>
